fixed text alignment issues post merge

--- a/menu1.css
+++ b/menu1.css
@@ -384,10 +384,11 @@ header{
 .checkout_body h2{
     font-style: italic;
     color: #682110;
+    text-align: left;
     margin-left: 20px;
 }
-.checkout_body .total{
-    margin-left: 20px;
+.checkout_body{
+    text-align: left;
 }
 .checkout-items { width: 100%; margin-bottom: 20px; 
 }
@@ -396,13 +397,17 @@ header{
       margin-left: 40px;
       grid-template-columns: 2fr 1fr 1fr;
       padding: 10px 0;
-
 }
 .cart-header, .cart-row {
       font-weight: bold;
-      text-align: left;
 }
-.total { font-weight: bold; 
+.total { 
+    font-weight: bold; 
+    margin-left: 10px;
+}
+.checkout_body label{
+    margin-left: 10px;
+    font-weight: bold;
 }
 .footer {
     background-image:
